<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SpeechToTextActivity">


    <Button
        android:id="@+id/speech_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="startRecording"
        android:text="@string/write_it_down"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/texted_speech" />

    <com.google.android.material.textfield.MaterialAutoCompleteTextView
        android:id="@+id/texted_speech"
        android:layout_width="280dp"
        android:layout_height="140dp"
        android:layout_marginTop="164dp"
        android:text=""
        android:hint="@string/if_you_want_tts_write_it_down_and_use_speakup_button_and_if_you_wish_to_use_stt_use_write_it_down_button"
        android:inputType="textMultiLine"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/speech_to_text"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/speech_to_text"
        app:layout_constraintTop_toBottomOf="@+id/speech_to_text" />

    <TextView
        android:id="@+id/speech_to_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="177dp"
        android:layout_marginBottom="412dp"
        android:text="@string/speech_to_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/speech_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/text_to_speech"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="160dp"
        android:text="@string/speak_up"
        android:onClick="startTalking"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/speech_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>