<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TextToSpeechActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/text_to_speech"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.142" />

    <com.google.android.material.textfield.MaterialAutoCompleteTextView
        android:id="@+id/edit_text"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_marginTop="32dp"
        android:hint="@string/enter_some_text"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/text_to_speech_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/convert_text_to_speech"
        app:layout_constraintEnd_toEndOf="@+id/edit_text"
        app:layout_constraintStart_toStartOf="@+id/edit_text"
        android:onClick="startTalking"
        app:layout_constraintTop_toBottomOf="@+id/edit_text" />

</androidx.constraintlayout.widget.ConstraintLayout>